fixed modal by raising z-index

--- a/app/assets/stylesheets/songs.scss
+++ b/app/assets/stylesheets/songs.scss
@@ -36,5 +36,5 @@ h1, h2, h3 {
   margin-top: 59px;
 }
 #myModal {
-  z-index: 4
+  z-index: 1041
 }
